# pdf-image-extractor

./: INTEGRATION_GUIDE.md  README.md  extract_chapter01_diagrams.py  main.py  pyproject.toml
docs/superpowers/specs/: 2026-07-02-vector-diagram-extraction-target.md
pdf_image_extractor/: __init__.py  cli.py  config.py  extractor.py  page_renderer.py
pdf_image_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_page_renderer.py
